force-app/main/default/objects/Skywave_Preflight_Config__mdt/Skywave_Preflight_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Skywave_PreflightController. Holds the Heroku origin and the shared-secret key used to call /api/preflight on the relay dyno. Single record convention: DeveloperName=Default.</description>
    <label>Skywave Preflight Config</label>
    <pluralLabel>Skywave Preflight Configs</pluralLabel>
</CustomObject>