force-app/main/default/objects/Skywave_Preflight_Config__mdt/fields/Heroku_Origin__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Origin__c</fullName>
    <description>HTTPS origin of the Heroku skywave-app dyno (no trailing slash), e.g. https://skywave-app-bb0e8666933b.herokuapp.com. Apex appends /api/preflight to call the self-report endpoint.</description>
    <label>Heroku Origin</label>
    <length>255</length>
    <type>Url</type>
</CustomField>