force-app/main/default/objects/Skywave_Preflight_Config__mdt/fields/Heroku_Origin_Url__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Origin_Url__c</fullName>
    <description>HTTPS origin of the Heroku skywave-app dyno (no trailing slash), e.g. https://skywave-app-&lt;hash&gt;.herokuapp.com. Set by install.sh once provisioned; read via Skywave_HerokuConfig. Apex appends /api/preflight.</description>
    <label>Heroku Origin URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>