force-app/main/default/objects/Skywave_Preflight_Config__mdt/fields/Preflight_Key__c.field-meta.xml
<CustomField>
    <fullName>Preflight_Key__c</fullName>
    <description>Shared secret sent as x-preflight-key header. Must match Heroku Config Var PREFLIGHT_KEY. Generate fresh per environment; rotate by changing both sides.</description>
    <label>Preflight Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>