force-app/main/default/objects/Skywave_Preflight_Config__mdt/fields/Statuspage_Url__c.field-meta.xml
<CustomField>
    <fullName>Statuspage_Url__c</fullName>
    <description>Base URL of the Statuspage.io API for Heroku, default https://status.heroku.com. Apex appends /api/v2/incidents/unresolved.json and /api/v2/scheduled-maintenances/upcoming.json.</description>
    <label>Statuspage URL</label>
    <length>255</length>
    <type>Url</type>
</CustomField>